WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311909
Fix (more) some correctness issues for a few TestWebKitAPI tests
https://bugs.webkit.org/show_bug.cgi?id=311909
Summary
Fix (more) some correctness issues for a few TestWebKitAPI tests
Richard Robinson
Reported
2026-04-10 00:15:24 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-10 00:15:31 PDT
<
rdar://problem/174473169
>
Richard Robinson
Comment 2
2026-04-10 00:16:19 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62424
EWS
Comment 3
2026-04-10 10:32:02 PDT
Committed
310947@main
(acd3aedadb0b): <
https://commits.webkit.org/310947@main
> Reviewed commits have been landed. Closing PR #62424 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug