Fix (more) some correctness issues for a few TestWebKitAPI tests https://bugs.webkit.org/show_bug.cgi?id=311909 rdar://174473169

Reviewed by Megan Gardner and Tim Horton.

Use RetainPtr instead of a raw pointer.

* Tools/TestWebKitAPI/Helpers/cocoa/TestWKWebView.mm:
(-[TestMessageHandler addMessage:withHandler:]):
(-[TestMessageHandler userContentController:didReceiveScriptMessage:]):

Canonical link: https://commits.webkit.org/310947@main